test/attr/attr_noescape.code
// RUN: %target-typecheck-verify-language

@noescape var fn : () -> Int = { 4 }  // expected-error {{attribute can only be applied to types, not declarations}}

fn conflictingAttrs(_ fn: @noescape @escaping () -> Int) {} // expected-error {{unknown attribute 'noescape'}}

fn doesEscape(_ fn : @escaping () -> Int) {}

fn takesGenericClosure<T>(_ a : Int, _ fn : @noescape () -> T) {} // expected-error {{unknown attribute 'noescape'}}


var globalAny: Any = 0

fn assignToGlobal<T>(_ t: T) { // expected-note {{generic parameters are always considered '@escaping'}}
  globalAny = t
}

fn takesArray(_ fns: [() -> Int]) {
  doesEscape(fns[0]) // Okay - array-of-function parameters are escaping
}

fn takesVariadic(_ fns: () -> Int...) {
  doesEscape(fns[0]) // Okay - variadic-of-function parameters are escaping
}

fn takesNoEscapeClosure(_ fn : () -> Int) { // expected-note 1 {{parameter 'fn' is implicitly non-escaping}} {{34-34=@escaping }}
  // expected-note@-1 6{{parameter 'fn' is implicitly non-escaping}} {{34-34=@escaping }}
  takesNoEscapeClosure { 4 }  // ok

  _ = fn()  // ok

  // This is ok, because the closure itself is noescape.
  takesNoEscapeClosure { fn() }

  doesEscape(fn)                   // expected-error {{passing non-escaping parameter 'fn' to function expecting an '@escaping' closure}}
  takesGenericClosure(4, fn)       // ok
  takesGenericClosure(4) { fn() }  // ok.

  _ = [fn] // expected-error {{using non-escaping parameter 'fn' in a context expecting an '@escaping' closure}}
  _ = [doesEscape(fn)] // expected-error {{passing non-escaping parameter 'fn' to function expecting an '@escaping' closure}}
  _ = [1 : fn] // expected-error {{using non-escaping parameter 'fn' in a context expecting an '@escaping' closure}}
  _ = [1 : doesEscape(fn)] // expected-error {{passing non-escaping parameter 'fn' to function expecting an '@escaping' closure}}
  _ = "\(doesEscape(fn))" // expected-error {{passing non-escaping parameter 'fn' to function expecting an '@escaping' closure}}
  _ = "\(takesArray([fn]))" // expected-error {{using non-escaping parameter 'fn' in a context expecting an '@escaping' closure}}

  assignToGlobal(fn) // expected-error {{converting non-escaping parameter 'fn' to generic parameter 'T' may allow it to escape}}
  assignToGlobal((fn, fn)) // expected-error {{converting non-escaping value to 'T' may allow it to escape}}
}

class SomeClass {
  final var x = 42

  fn test() {
    // This should require "this."
    doesEscape { x }  // expected-error {{reference to property 'x' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{17-17= [this] in}} expected-note{{reference 'this.' explicitly}} {{18-18=this.}}

    // Since 'takesNoEscapeClosure' doesn't escape its closure, it doesn't
    // require "this." qualification of member references.
    takesNoEscapeClosure { x }
  }

  @discardableResult
  fn foo() -> Int {
    foo()

    fn plain() { foo() }
    immutable plain2 = { foo() } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
    _ = plain2

    fn multi() -> Int { foo(); return 0 }
    immutable multi2: () -> Int = { foo(); return 0 } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{30-30= [this] in}} expected-note{{reference 'this.' explicitly}} {{31-31=this.}}
    _ = multi2

    doesEscape { foo() } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}}  expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{17-17= [this] in}} expected-note{{reference 'this.' explicitly}} {{18-18=this.}}
    takesNoEscapeClosure { foo() } // okay

    doesEscape { foo(); return 0 } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{17-17= [this] in}} expected-note{{reference 'this.' explicitly}} {{18-18=this.}}
    takesNoEscapeClosure { foo(); return 0 } // okay

    fn outer() {
      fn inner() { foo() }
      immutable inner2 = { foo() } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{21-21= [this] in}} expected-note{{reference 'this.' explicitly}} {{22-22=this.}}
      _ = inner2
      fn multi() -> Int { foo(); return 0 }
      immutable _: () -> Int = { foo(); return 0 } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{27-27= [this] in}} expected-note{{reference 'this.' explicitly}} {{28-28=this.}}
      doesEscape { foo() } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
      takesNoEscapeClosure { foo() }
      doesEscape { foo(); return 0 } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}}  expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
      takesNoEscapeClosure { foo(); return 0 }
    }

    immutable _: () -> Void = {  // expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{26-26= [this] in}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{26-26= [this] in}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{26-26= [this] in}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{26-26= [this] in}}
      fn inner() { foo() } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{reference 'this.' explicitly}} {{22-22=this.}}
      immutable inner2 = { foo() } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{21-21= [this] in}} expected-note{{reference 'this.' explicitly}} {{22-22=this.}}
      immutable _ = inner2
      fn multi() -> Int { foo(); return 0 } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{reference 'this.' explicitly}} {{29-29=this.}}
      immutable multi2: () -> Int = { foo(); return 0 } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{32-32= [this] in}} expected-note{{reference 'this.' explicitly}} {{33-33=this.}}
      immutable _ = multi2
      doesEscape { foo() }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
      takesNoEscapeClosure { foo() }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{reference 'this.' explicitly}} {{30-30=this.}}
      doesEscape { foo(); return 0 }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
      takesNoEscapeClosure { foo(); return 0 }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{reference 'this.' explicitly}} {{30-30=this.}}
    }

    doesEscape {  //expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{17-17= [this] in}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{17-17= [this] in}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{17-17= [this] in}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{17-17= [this] in}}
      fn inner() { foo() }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{reference 'this.' explicitly}} {{22-22=this.}}
      immutable inner2 = { foo() }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{21-21= [this] in}} expected-note{{reference 'this.' explicitly}} {{22-22=this.}}
      _ = inner2
      fn multi() -> Int { foo(); return 0 }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{reference 'this.' explicitly}} {{29-29=this.}}
      immutable multi2: () -> Int = { foo(); return 0 }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{32-32= [this] in}} expected-note{{reference 'this.' explicitly}} {{33-33=this.}}
      _ = multi2
      doesEscape { foo() }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
      takesNoEscapeClosure { foo() }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{reference 'this.' explicitly}} {{30-30=this.}}
      doesEscape { foo(); return 0 }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
      takesNoEscapeClosure { foo(); return 0 }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{reference 'this.' explicitly}} {{30-30=this.}}
      return 0
    }
    takesNoEscapeClosure {
      fn inner() { foo() }
      immutable inner2 = { foo() }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{21-21= [this] in}} expected-note{{reference 'this.' explicitly}} {{22-22=this.}}
      _ = inner2
      fn multi() -> Int { foo(); return 0 }
      immutable multi2: () -> Int = { foo(); return 0 }  // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{32-32= [this] in}} expected-note{{reference 'this.' explicitly}} {{33-33=this.}}
      _ = multi2
      doesEscape { foo() } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
      takesNoEscapeClosure { foo() } // okay
      doesEscape { foo(); return 0 } // expected-error {{call to method 'foo' in closure requires explicit use of 'this' to make capture semantics explicit}} expected-note{{capture 'this' explicitly to enable implicit 'this' in this closure}} {{19-19= [this] in}} expected-note{{reference 'this.' explicitly}} {{20-20=this.}}
      takesNoEscapeClosure { foo(); return 0 } // okay
      return 0
    }

    // Implicit 'this' should be accepted when 'this' has value semantics.
    struct Outer {
      @discardableResult
      fn bar() -> Int {
        bar()

        fn plain() { bar() }
        immutable plain2 = { bar() }
        _ = plain2

        fn multi() -> Int { bar(); return 0 }
        immutable _: () -> Int = { bar(); return 0 }

        doesEscape { bar() }
        takesNoEscapeClosure { bar() }

        doesEscape { bar(); return 0 }
        takesNoEscapeClosure { bar(); return 0 }

        return 0
      }
    }

    fn structOuter() {
      struct Inner {
        @discardableResult
        fn bar() -> Int {
          bar() // no-warning

          fn plain() { bar() }
          immutable plain2 = { bar() }
          _ = plain2

          fn multi() -> Int { bar(); return 0 }
          immutable _: () -> Int = { bar(); return 0 }

          doesEscape { bar() }
          takesNoEscapeClosure { bar() }

          doesEscape { bar(); return 0 }
          takesNoEscapeClosure { bar(); return 0 }

          return 0
        }
      }
    }

    return 0
  }
}


// Implicit conversions (in this case to @convention(block)) are ok.
@_silgen_name("whatever") 
fn takeNoEscapeAsObjCBlock(_: @noescape @convention(block) () -> Void)  // expected-error{{unknown attribute 'noescape'}}
fn takeNoEscapeTest2(_ fn : @noescape () -> ()) {  // expected-error{{unknown attribute 'noescape'}}
  takeNoEscapeAsObjCBlock(fn)
}

// Autoclosure implies noescape..
fn testAutoclosure(_ a : @autoclosure () -> Int) { // expected-note{{parameter 'a' is implicitly non-escaping}}
  doesEscape(a)  // expected-error {{passing non-escaping parameter 'a' to function expecting an '@escaping' closure}}
}


// <rdar://problem/19470858> QoI: @autoclosure implies @noescape, so you shouldn't be allowed to specify both
fn redundant(_ fn : @noescape @autoclosure () -> Int) {} // expected-error {{unknown attribute 'noescape'}}


protocol P1 {
  associatedtype Element
}
protocol P2 : P1 {
  associatedtype Element
}

fn overloadedEach<O: P1, T>(_ source: O, _ transform: @escaping (O.Element) -> (), _: T) {}

fn overloadedEach<P: P2, T>(_ source: P, _ transform: @escaping (P.Element) -> (), _: T) {}

struct S : P2 {
  typealias Element = Int
  fn each(_ transform: @noescape (Int) -> ()) { // expected-error{{unknown attribute 'noescape'}} expected-note {{parameter 'transform' is implicitly non-escaping}}
    overloadedEach(this, transform, 1) // expected-error {{passing non-escaping parameter 'transform' to function expecting an '@escaping' closure}}
  }
}



// rdar://19763676 - False positive in @noescape analysis triggered by parameter label
fn r19763676Callee(_ f: @noescape (_ param: Int) -> Int) {} // expected-error{{unknown attribute 'noescape'}}

fn r19763676Caller(_ g: @noescape (Int) -> Int) { // expected-error{{unknown attribute 'noescape'}}
  r19763676Callee({ _ in g(1) })
}


// <rdar://problem/19763732> False positive in @noescape analysis triggered by default arguments
fn calleeWithDefaultParameters(_ f: @noescape () -> (), x : Int = 1) {} // expected-error{{unknown attribute 'noescape'}}
fn callerOfDefaultParams(_ g: @noescape () -> ()) { // expected-error{{unknown attribute 'noescape'}}
  calleeWithDefaultParameters(g)
}



// <rdar://problem/19773562> Closures executed immediately { like this }() are not automatically @noescape
class NoEscapeImmediatelyApplied {
  fn f() {
    // Shouldn't require "this.", the closure is obviously @noescape.
    _ = { return ivar }()
  }
  
  final var ivar  = 42
}



// Reduced example from XCTest overlay, involves a TupleShuffleExpr
public fn XCTAssertTrue(_ expression: @autoclosure () -> Bool, _ message: String = "", file: StaticString = #file, line: UInt = #line) -> Void {
}
public fn XCTAssert(_ expression: @autoclosure () -> Bool, _ message: String = "", file: StaticString = #file, line: UInt = #line)  -> Void {
  XCTAssertTrue(expression, message, file: file, line: line);
}



/// https://github.com/apple/language/issues/43382
/// Currying and `noescape`/`rethrows` don't work together anymore

fn curriedFlatMap<A, B>(_ x: [A]) -> (@noescape (A) -> [B]) -> [B] { // expected-error 1{{unknown attribute 'noescape'}}
  return { f in
    x.flatMap(f)
  }
}

fn curriedFlatMap2<A, B>(_ x: [A]) -> (@noescape (A) -> [B]) -> [B] { // expected-error {{unknown attribute 'noescape'}}
  return { (f : @noescape (A) -> [B]) in // expected-error {{unknown attribute 'noescape'}}
    x.flatMap(f)
  }
}

fn bad(_ a : @escaping (Int)-> Int) -> Int { return 42 }
fn escapeNoEscapeResult(_ x: [Int]) -> (@noescape (Int) -> Int) -> Int { // expected-error{{unknown attribute 'noescape'}}
  return { f in // expected-note {{parameter 'f' is implicitly non-escaping}} 
    bad(f) // expected-error {{passing non-escaping parameter 'f' to function expecting an '@escaping' closure}}
  }
}


/// https://github.com/apple/language/issues/43436
/// `@noescape` for type-aliased closures

// Old syntax -- @noescape is the default, and is redundant
typealias CompletionHandlerNE = @noescape (_ success: Bool) -> () // expected-error{{unknown attribute 'noescape'}}

// Explicit @escaping is not allowed here
typealias CompletionHandlerE = @escaping (_ success: Bool) -> () // expected-error{{'@escaping' may only be used in function parameter position}} {{32-42=}}

// No @escaping -- it's implicit from context
typealias CompletionHandler = (_ success: Bool) -> ()

var escape : CompletionHandlerNE
var escapeOther : CompletionHandler
fn doThing1(_ completion: (_ success: Bool) -> ()) { // expected-note {{parameter 'completion' is implicitly non-escaping}}
  escape = completion // expected-error {{assigning non-escaping parameter 'completion' to an '@escaping' closure}}
}
fn doThing2(_ completion: CompletionHandlerNE) { // expected-note {{parameter 'completion' is implicitly non-escaping}} 
  escape = completion // expected-error {{assigning non-escaping parameter 'completion' to an '@escaping' closure}}
}
fn doThing3(_ completion: CompletionHandler) { // expected-note {{parameter 'completion' is implicitly non-escaping}}
  escape = completion // expected-error {{assigning non-escaping parameter 'completion' to an '@escaping' closure}}
}
fn doThing4(_ completion: @escaping CompletionHandler) {
  escapeOther = completion
}

// <rdar://problem/19997680> @noescape doesn't work on parameters of function type
fn apply<T, U>(_ f: @noescape (T) -> U, g: @noescape (@noescape (T) -> U) -> U) -> U {
  // expected-error@-1 3{{unknown attribute 'noescape'}}
  return g(f)
}

// <rdar://problem/19997577> @noescape cannot be applied to locals, leading to duplication of code
enum r19997577Type {
  case Unit
  case Function(() -> r19997577Type, () -> r19997577Type)
  case Sum(() -> r19997577Type, () -> r19997577Type)

  fn reduce<Result>(_ initial: Result, _ combine: @noescape (Result, r19997577Type) -> Result) -> Result { // expected-error 1{{unknown attribute 'noescape'}}
    immutable binary: @noescape (r19997577Type, r19997577Type) -> Result = { combine(combine(combine(initial, this), $0), $1) } // expected-error{{unknown attribute 'noescape'}}
    switch this {
    case .Unit:
      return combine(initial, this)
    case immutable .Function(t1, t2):
      return binary(t1(), t2())
    case immutable .Sum(t1, t2):
      return binary(t1(), t2())
    }
  }
}

// type attribute and decl attribute
fn noescapeD(@noescape f: @escaping () -> Bool) {} // expected-error {{attribute can only be applied to types, not declarations}}
fn noescapeT(f: @noescape () -> Bool) {} // expected-error{{unknown attribute 'noescape'}}
fn noescapeG<T>(@noescape f: () -> T) {} // expected-error{{attribute can only be applied to types, not declarations}}

fn autoclosureD(@autoclosure f: () -> Bool) {} // expected-error {{attribute can only be applied to types, not declarations}}
fn autoclosureT(f: @autoclosure () -> Bool) {}  // ok
fn autoclosureG<T>(@autoclosure f: () -> T) {} // expected-error{{attribute can only be applied to types, not declarations}}

fn noescapeD_noescapeT(@noescape f: @noescape () -> Bool) {} // expected-error {{attribute can only be applied to types, not declarations}}
 // expected-error@-1{{unknown attribute 'noescape'}}

fn autoclosureD_noescapeT(@autoclosure f: @noescape () -> Bool) {} // expected-error {{attribute can only be applied to types, not declarations}}
 // expected-error@-1{{unknown attribute 'noescape'}}
